# drone_contest

./: CMakeLists.txt  README.md  package.xml
UAV_control/: UAV_control.cpp
UAV_control/src/: control.cpp  control.hpp  extras.cpp  sub_srv_fncs.cpp
config/: UAV_control.yaml
include/: RRT3D.cpp  RRT3D.h
launch/: UAV_control.launch
reference/: UAV_control.cpp
reference/src/: cont_fncs.cpp  fncs_header.hpp  srv_fncs.cpp  sub_fncs.cpp
srv/change/: follower_start.srv  mission_start.srv
test/: tracker_test_pub.py
